--- a/index.ipynb
+++ b/index.ipynb
@@ -94,7 +94,7 @@
    },
    "outputs": [],
    "source": [
-    "number_of_weeks = "
+    "number_of_weeks = None"
    ]
   },
   {
@@ -105,7 +105,7 @@
    },
    "outputs": [],
    "source": [
-    "number_of_weeks # 3"
+    "number_of_weeks = 3 # 3"
    ]
   },
   {
